[workspace]
resolver = "2"
members = [
    "frontend",
    "backend",
    "judger",
    "testsuit",
    "backend/migration",
    "grpc",
]

[workspace.dependencies]
prost = "0.12.3"
prost-types = "0.12.3"
toml = "0.7.4"
derive_builder = "0.12.0"
serde = "1.0.163"
tokio = "1.34.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.17"
tonic-web = "0.10.2"
prost-wkt = "0.5"
prost-wkt-types = "0.5"
prost-wkt-build = "0.5"

[workspace.dependencies.tonic-build]
version = "0.10.2"
default-features = false

[workspace.dependencies.tonic-build]
version = "0.10.2"
default-features = false

[workspace.dependencies.tonic]
version = "0.10.2"
default-features = false


[profile.wasm-release]
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"

[profile.release]
opt-level = "s"
panic = 'abort'
lto = true
