[workspace]
resolver = "2"
members = [
    "frontend",
    "backend",
    "judger",
    "testsuit",
    "backend/migration",
]

[workspace.dependencies]
prost = "0.12.3"
prost-types = "0.12.3"
tonic-build = "0.10.2"
tonic-web = "0.10.2"
serde = "1.0.163"
toml = "0.7.4"

[workspace.dependencies.tonic]
version = "0.10.2"
default-features = false

[workspace.dependencies.sea-orm]
version = "0.12.11"

[workspace.dependencies.sea-orm-migration]
version = "0.12.11"

[profile.wasm-release]
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"

[profile.release]
opt-level = "s"
panic = 'abort'
lto = true
