[workspace]
resolver = "2"
members = [
    "frontend",
    "backend",
    "judger",
    # "testsuit",
    "backend/migration",
    "grpc",
    "judger/plugins/rlua-54",
]

[workspace.dependencies]
tikv-jemallocator = "0.5"
prost = "0.12.3"
prost-types = "0.12.3"
toml = "0.7.4"
derive_builder = "0.12.0"
serde = "1.0.163"
tokio = "1.34.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.17"
tonic-web = "0.11.0"
prost-wkt = "0.5"
prost-wkt-types = "0.5"
prost-wkt-build = "0.5"

[workspace.dependencies.tonic-build]
version = "0.11.0"
default-features = false

[workspace.dependencies.chrono]
version = "0.4.26"

[workspace.dependencies.tonic]
version = "0.11.0"
default-features = false

[workspace.dependencies.sea-orm]
version = "0.12.11"
default-features = false

[workspace.dependencies.sea-orm-migration]
version = "0.12.11"
default-features = false

[profile.wasm-release]
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"

[profile.release]
opt-level = "s"
panic = 'abort'
lto = true
