[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tikv-jemallocator = "0.5"
log = "0.4.18"
paste = "1.0.12"
prost = { workspace = true }
toml = { workspace = true }
prost-types = { workspace = true }
thiserror = "1.0.44"
derive_builder = "0.12.0"
futures = "0.3.29"
bincode = "1.3.3"
base64 = "0.21.5"
uuid = "1.5.0"
tonic-web = { workspace = true }
quick_cache = "0.4.0"
leaky-bucket = "1.0.1"
hickory-resolver = "0.24.0"
crossbeam-queue = "0.3.8"
dashmap = "5.5.3"
tracing-opentelemetry = "0.22.0"
rand = "0.8.5"
rand_hc = "0.3.2"
blake2 = "0.10.6"
sea-query = "0.30.4"
ip_network = { version = "0.4.1", features = ["serde"] }
# a lot of opentelemetry dependencies
opentelemetry = { version = "0.21.0", features = ["metrics"] }
opentelemetry_sdk = { version = "0.21.1", features = ["rt-tokio", "metrics"] }
opentelemetry-stdout = { version = "0.2.0", features = ["metrics"] }
opentelemetry-semantic-conventions = "0.13.0"
opentelemetry-otlp = { version = "0.14.0", features = ["metrics"] }
migration = { path = "./migration",optional = true }
sea-orm-cli = {version = "0.12.12",optional = true}

[dependencies.chrono]
workspace = true
features = ["serde"]

[dependencies.reqwest]
version = "0.11.22"
default-features = false
features = ["rustls-tls", "json"]

[dependencies.k256]
version = "0.13.2"
features = ["arithmetic", "serde", "sha256"]

[dependencies.tokio-stream]
version = "0.1.14"
features = ["sync"]

[dependencies.tracing-subscriber]
version = "0.3.17"
features = ["json"]

[dependencies.tracing]
version = "0.1.40"
features = ["async-await", "log", "release_max_level_debug"]

[dependencies.tokio]
version = "1.34.0"
features = ["macros", "rt-multi-thread", "full", "time"]

[dependencies.sea-orm]
version = "0.12.11"
default-features = false
features = [
    "runtime-tokio",
    "macros",
    "mock",
    "sqlx-sqlite",
    "with-chrono",
    "debug-print"
]

[dependencies.serde]
workspace = true
features = ["derive"]

[dependencies.tonic]
version = "0.10.2"
features = ["transport", "channel", "codegen", "prost","tls"]

[dependencies.spin]
version = "0.9.8"
features = ["mutex", "spin_mutex", "rwlock"]

[dependencies.sea-orm-migration]
# workspace = true
version = "0.12.11"
optional = true
features = [
  "runtime-tokio-rustls",
  "sqlx-sqlite","with-chrono"
]

[build-dependencies]
tonic-build = { workspace = true }

[features]
default = []
standalone = ["dep:migration","dep:sea-orm-migration","dep:sea-orm-cli"]
