cargo-features = ["codegen-backend"]

[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[profile.dev]
codegen-backend = "cranelift"

[dependencies]
tikv-jemallocator = { workspace = true, optional = true }
log = "0.4.18"
paste = "1.0.12"
toml = { workspace = true }
thiserror = "1.0.44"
derive_builder = { workspace = true }
futures = "0.3.29"
bincode = "1.3.3"
base64 = "0.21.5"
tonic-web = { workspace = true }
quick_cache = "0.4.0"
hickory-resolver = "0.24.0"
crossbeam-queue = "0.3.8"
dashmap = "5.5.3"
rand = "0.8.5"
rand_hc = "0.3.2"
blake2 = "0.10.6"
ip_network = { version = "0.4.1", features = ["serde"] }
# a lot of opentelemetry dependencies
opentelemetry = { version = "0.23.0", features = ["metrics"] }
opentelemetry_sdk = { version = "0.23.0", features = ["rt-tokio", "metrics"] }
opentelemetry-stdout = { version = "0.4.0", features = ["metrics"] }
opentelemetry-otlp = { version = "0.16.0", features = ["metrics", "tls-roots"] }
opentelemetry-semantic-conventions = "0.16.0"
tracing-opentelemetry = { version = "0.24.0", features = ["metrics"] }
tracing-core = "0.1.32"
migration = { path = "./migration", optional = true }
sea-orm-cli = { version = "0.12.12", optional = true }
governor = "0.6.0"
http = "^0.2"
lazy_static = "1.5.0"
prost-wkt-types = { workspace = true }

[dependencies.grpc]
path = "../grpc"
features = [
  "server",
  "client",
  "backend",
  "judger",
  "transport",
  "serde",
  "extra_trait"
]

[dependencies.postcard]
version = "^1.0"
default-features = false
features = ["alloc"]

[dependencies.uuid]
version = "1.5.0"
features = ["v4", "fast-rng"]

[dependencies.tower-http]
version = "^0.4"
features = ["cors", "trace"]

[dependencies.sea-query]
version = "0.30.4"
features = ["thread-safe", "with-chrono", "backend-sqlite"]

[dependencies.chrono]
workspace = true
features = ["serde"]

[dependencies.reqwest]
version = "0.11.22"
default-features = false
features = ["rustls-tls", "json", "multipart"]

[dependencies.k256]
version = "0.13.2"
features = ["arithmetic", "serde", "sha256"]

[dependencies.tokio-stream]
version = "0.1.14"
features = ["sync"]

[dependencies.tracing-subscriber]
workspace = true
features = ["json"]

[dependencies.tracing]
workspace = true
features = ["async-await", "log", "release_max_level_debug"]

[dependencies.tokio]
workspace = true
features = ["macros", "rt-multi-thread", "full", "time"]

[dependencies.sea-orm]
version = "0.12.11"
features = [
  "runtime-tokio-rustls",
  "macros",
  "mock",
  "sqlx-sqlite",
  "with-chrono",
]

[dependencies.serde]
workspace = true
features = ["derive"]

[dependencies.tonic]
workspace = true
features = ["transport", "channel", "codegen", "prost", "tls"]

[dependencies.spin]
version = "0.9.8"
features = ["mutex", "spin_mutex", "rwlock"]

[dependencies.sea-orm-migration]
# workspace = true
version = "0.12.11"
optional = true
features = ["runtime-tokio-rustls", "sqlx-sqlite", "with-chrono"]

[features]
default = ["debug"]
standalone = ["dep:migration", "dep:sea-orm-migration", "dep:sea-orm-cli"]
release = ["dep:tikv-jemallocator"]
debug = ["sea-orm/debug-print"]
