cargo-features = ["codegen-backend"]

[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[profile.dev]
codegen-backend = "cranelift"

[dependencies]
tikv-jemallocator = { workspace = true }
paste = "1.0.12"
toml = { workspace = true }
thiserror = "1.0.44"
derive_builder = { workspace = true }
futures = "0.3.29"
bincode = "1.3.3"
base64 = "0.21.5"
tonic-web = { workspace = true }
quick_cache = "0.6.2"
hickory-resolver = "0.24.0"
crossbeam-queue = "0.3.8"
dashmap = "5.5.3"
rand = "0.8.5"
rand_hc = "0.3.2"
blake2 = "0.10.6"
ip_network = { version = "0.4.1", features = ["serde"] }
# a lot of opentelemetry dependencies
opentelemetry = { version = "0.23.0", features = ["metrics"] }
opentelemetry_sdk = { version = "0.23.0", features = ["rt-tokio", "metrics"] }
opentelemetry-stdout = { version = "0.4.0", features = ["metrics"] }
opentelemetry-otlp = { version = "0.16.0", features = ["metrics", "tls-roots"] }
opentelemetry-semantic-conventions = "0.16.0"
tracing-opentelemetry = { version = "0.24.0", features = ["metrics"] }
tracing-core = "0.1.32"
migration = { path = "./migration", optional = true }
governor = "0.6.0"
http = "^0.2"
lazy_static = "1.5.0"
prost-wkt-types = { workspace = true }
tracing-futures = "0.2.5"

[dependencies.log]
version = "0.4.18"
features = ["release_max_level_off"]

[dependencies.grpc]
path = "../grpc"
features = [
  "server",
  "client",
  "backend",
  "judger",
  "transport",
  "serde",
  "extra_trait"
]

[dependencies.postcard]
version = "^1.0"
default-features = false
features = ["alloc"]

[dependencies.uuid]
version = "1.5.0"
features = ["v4", "fast-rng"]

[dependencies.tower-http]
version = "^0.4"
features = ["cors", "trace"]

[dependencies.sea-query]
version = "0.31.0"
features = ["thread-safe", "with-chrono", "backend-sqlite"]

[dependencies.chrono]
workspace = true
features = ["serde"]

[dependencies.reqwest]
version = "0.11.22"
default-features = false
features = ["rustls-tls", "json", "multipart"]

[dependencies.k256]
version = "0.13.2"
features = ["arithmetic", "serde", "sha256"]

[dependencies.tokio-stream]
version = "0.1.14"
features = ["sync"]

[dependencies.tracing-subscriber]
workspace = true
features = ["json"]

[dependencies.tracing]
workspace = true
features = ["async-await", "log", "release_max_level_off"]

[dependencies.tokio]
workspace = true
features = ["macros", "rt-multi-thread", "full", "time"]

[dependencies.sea-orm]
workspace = true
default-features = false
features = [
  "runtime-tokio-rustls",
  "macros",
  "mock",
  "sqlx-sqlite",
  "with-chrono",
]

[dependencies.serde]
workspace = true
features = ["derive"]

[dependencies.tonic]
workspace = true
features = ["transport", "channel", "codegen", "prost", "tls"]

[dependencies.spin]
version = "0.9.8"
features = ["mutex", "spin_mutex", "rwlock"]

[dependencies.sea-orm-migration]
workspace = true
optional = true
default-features = false
features = ["runtime-tokio-rustls", "sqlx-sqlite", "with-chrono"]

[features]
default = ["insecure-print"]
standalone = ["dep:migration", "dep:sea-orm-migration"]
insecure-print = ["sea-orm/debug-print"]
