[package]
name = "judger"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.tokio]
version = "1.28.0"
features = ["rt-multi-thread", "process", "macros", "fs", "io-util","parking_lot"]

[dependencies.tonic]
version = "0.9.2"
features = ["transport", "codegen", "prost", "tls"]

[dependencies.serde]
version = "1.0.163"
features = ["derive"]

[dependencies.tokio-stream]
version = "0.1.14"
features = ["net"]

[dependencies]
cgroups-rs = "0.3.2"
env_logger = "0.10.0"
error = "0.1.9"
futures = "0.3.28"
libc = "0.2.142"
log = "0.4.17"
prost = "0.11.9"
prost-types = "0.11.9"
tempfile = "3.8.0"
thiserror = "1.0.40"
toml = "0.7.4"
tower = "0.4.13"
tower-layer = "0.3.2"

[build-dependencies]
tonic-build = "0.9.2"
