[package]
name = "judger"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cgroups-rs = "0.3.2"
env_logger = "0.10.1"
futures-core = "0.3.30"
log = "0.4.17"
prost = { workspace = true }
prost-types = { workspace = true }
thiserror = "1.0.40"
toml = { workspace = true }
derive_builder = { workspace = true }
fuser = "0.14.0"
tar = "0.4.40"
grpc = { path = "../grpc" }
crossbeam = "0.8.4"
lazy_static = "1.4.0"

[dependencies.rustix]
version = "0.38.28"
features = ["process", "thread"]
[dependencies.uuid]
version = "1.6.1"
features = ["serde"]

[dependencies.tokio]
version = "1.28.0"
features = [
    "rt-multi-thread",
    "process",
    "macros",
    "fs",
    "io-util",
    "parking_lot",
]

# TODO migrate to 10
[dependencies.tonic]
workspace= true
features = ["transport", "codegen", "prost", "tls"]

[dependencies.serde]
workspace = true
features = ["derive"]

[dependencies.tokio-stream]
version = "0.1.14"
features = ["net"]

[dependencies.spin]
version = "0.9.8"
features = ["mutex", "spin_mutex"]

[dev-dependencies]
tempfile = "3.8.0"
tower = "0.4.13"
tower-layer = "0.3.2"

