[package]
name = "judger"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cgroups-rs = "0.3.4"
env_logger = "0.10.1"
futures-core = "0.3.30"
prost = { workspace = true }
prost-types = { workspace = true }
thiserror = "1.0.40"
toml = { workspace = true }
derive_builder = { workspace = true }
tar = "0.4.40"
grpc = { path = "../grpc" }
lazy_static = "1.4.0"
libc = "0.2.154"
bytes = "1.6.0"
async-stream = "0.3.5"

[dependencies.log]
version = "0.4.17"
features = ["release_max_level_debug"]

[dependencies.fuse3]
version = "0.7.1"
features = ["tokio-runtime", "unprivileged"]

[dependencies.rustix]
version = "0.38.28"
features = ["process", "thread"]

[dependencies.uuid]
version = "1.6.1"
features = ["serde"]

[dependencies.tokio]
version = "1.28.0"
features = [
    "rt-multi-thread",
    "process",
    "macros",
    "fs",
    "io-util",
    "parking_lot",
    "signal"
]

# TODO migrate to 10
[dependencies.tonic]
workspace= true
features = ["transport", "codegen", "prost", "tls"]

[dependencies.serde]
workspace = true
features = ["derive"]

[dependencies.tokio-stream]
version = "0.1.14"
features = ["net"]

[dependencies.spin]
version = "0.9.8"
features = ["mutex", "spin_mutex"]

[dev-dependencies]
tempfile = "3.8.0"
tower = "0.4.13"
tower-layer = "0.3.2"
