[package]
name = "sandbox"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspaces]
members = ["nsjail-sys"]

[dependencies.tokio]
version = "1.28.0"
features = ["rt-multi-thread", "process", "macros", "fs", "io-util"]

[dependencies.nsjail-sys]
path = "./nsjail-sys"

[dependencies.tonic]
version = "0.9.2"
features = ["transport", "codegen", "prost", "tls"]

[dependencies.serde]
version = "1.0.163"
features = ["derive"]

[dependencies]
async-trait = "0.1.68"
cgroups-rs = "0.3.2"
env_logger = "0.10.0"
error = "0.1.9"
futures = "0.3.28"
libc = "0.2.142"
log = "0.4.17"
once_cell = "1.17.1"
prost = "0.11.9"
sysinfo = "0.29.0"
thiserror = "1.0.40"
tokio-stream = "0.1.14" 
toml = "0.7.4"

[build-dependencies]
tonic-build = "0.9.2"
