[package]
name = "testsuit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic-web = "0.9.2"
tonic-build = "0.9.2"
chrono = "0.4.26"
prost = "0.11.9"
prost-types = "0.11.9"
base64 = "0.21.5"
uuid = "1.5.0"
env_logger = "0.10.0"
log = "0.4.20"
anyhow = "1.0.75"
hyper = "1.0.1"
tower = "0.4.13"

[dependencies.tokio]
version = "1.28.0"
features =["macros", "rt-multi-thread", "full","time"]

[dependencies.tokio-stream]
version = "0.1.14"
features =["sync"]

[dependencies.tonic]
version = "0.9.2"
features = ["transport", "channel", "codegen", "tls", "prost"]

[build-dependencies]
tonic-build = "0.9.2"
