[package]
name = "testsuit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.18"
chrono = "0.4.26"
futures = "0.3.29"
base64 = "0.21.5"
uuid = "1.5.0"
anyhow = "1.0.75"
tower = "0.4.13"
env_logger = "0.10.1"
prost = "0.12.3"
prost-types = "0.12.3"
tonic-web = "0.10.2"
futures-core = "0.3.29"
tokio-rustls = "0.24.1"
rustls-pki-types = "1.0.1"

[dependencies.rustls]
version ="0.21.9"
features = ["dangerous_configuration"]

[dependencies.tokio-stream]
version = "0.1.14"
features =["sync"]

[dependencies.tracing-subscriber]
version = "0.3.17"
features =["json"]

[dependencies.tokio]
version = "1.28.0"
features =["macros", "rt-multi-thread", "full","time"]

[dependencies.serde]
version = "1.0.163"
features = ["derive"]

[dependencies.tonic]
version = "0.10.2"
features = ["transport", "channel", "codegen", "tls", "prost"]

[dependencies.hyper]
version ="0.14.27"
features=["client","http1","http2"]

[build-dependencies]
tonic-build = "0.9.2"
