[package]
name = "testsuit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = { workspace = true }
log = "0.4.18"
chrono = "0.4.26"
futures = "0.3.29"
base64 = "0.21.5"
tower = "0.4.13"
prost = { workspace = true }
prost-types = { workspace = true }
tonic-web = { workspace = true }
futures-core = "0.3.29"
http-body = "0.4.6"
thiserror = "1.0.56"
clap = { version = "4.4.18", features = ["derive"] }
indicatif-log-bridge = "0.2.2"
indicatif = "0.17.7"
pretty_env_logger = "0.5.0"

[dependencies.serde]
workspace = true
features = ["derive"]

[dependencies.uuid]
version = "1.7.0"
features = [
    "v4",
    "fast-rng",
    "macro-diagnostics",
]

[dependencies.async-std]
version = "1.7.0"
features = ["attributes","tokio1"]

[dependencies.tonic]
workspace = true
features = ["transport", "channel", "codegen", "tls", "prost"]

[dependencies.hyper]
version = "0.14.27"
features = ["client", "http1", "http2"]

[build-dependencies]
tonic-build = { workspace = true }
