[package]
name = "tools"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "mdoj"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.86"
serde_json = "1.0.127"
zip = "2.2.0"


[dependencies.tonic]
workspace = true
features = ["transport", "codegen", "prost", "channel"]

[dependencies.grpc]
path = "../grpc"
features = ["backend", "client", "extra_trait", "transport"]

[dependencies.serde]
workspace = true
features = ["derive"]

[dependencies.tokio]
workspace = true
features = ["macros", "rt-multi-thread"]

[dependencies.reqwest]
version = "0.12.7"
features = ["json"]

[dependencies.clap]
version = "4.5.16"
features = ["derive"]

[dependencies.futures]
version = "0.3.30"
default-features = false
features = ["std"]
