[package]
name = "entity"
version = "0.1.0"
edition = "2021"
publish = false
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
futures = "0.3"

[dependencies.sea-orm]
version = "0.8"
features = ["sqlx-postgres", "runtime-actix-rustls", "macros", "mock","sqlx-sqlite"]

[dependencies.serde]
version = "1.0"
features = ["derive"]

