[package]
name = "migration"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "migration"
path = "src/lib.rs"

[dependencies]
log = "0.4.20"
tracing-subscriber = "0.3"
paste = "1.0.12"

[dependencies.tracing]
version = "0.1.40"
features = ["async-await", "log"]

[dependencies.async-std]
version = "1"
features = ["attributes", "tokio1"]

[dependencies.sea-orm]
version = "0.12.11"
features = ["debug-print"]

[dependencies.sea-orm-migration]
workspace = true
features = [
  # Enable at least one `ASYNC_RUNTIME` and `DATABASE_DRIVER` feature if you want to run migration via CLI.
  # View the list of supported features at https://www.sea-ql.org/SeaORM/docs/install-and-config/database-and-async-runtime.
  # e.g.
  "runtime-tokio-native-tls",
  "sqlx-sqlite","with-chrono"
]
